fix(ereb-wi): fix task statics column wrapping

--- a/ereb-wi/css/main.scss
+++ b/ereb-wi/css/main.scss
@@ -17,3 +17,6 @@
 .navbar-form .wi__host_input {
   width: 200px;
 }
+.tasks-status {
+  white-space: nowrap;
+}
